[TabModel] Add #willUndoTabClosure event
Add #willUndoTabClosure event.
-Update tests accordingly.
-Plan to use this for the tab strip. With the refactored animations,
 there's a case where we want to finish animations before the undone
 closure is reinserted into the TabModel, as one action in this flow
 depends on the removed Tab not being in the model at the end of the
 animation.

Bug: 450975245
Change-Id: I7b1f4fcb4eb89c58e3b06e2bd2972a4cd5a1de3b
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7032707
Commit-Queue: Neil Coronado <nemco@google.com>
Reviewed-by: Calder Kitagawa <ckitagawa@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1529887}